--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,23 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+	background: #f1f0f8;
+}
+
+@layer components {
+	.btn {
+		@apply cursor-pointer inline-flex gap-1 items-center justify-center rounded-md bg-blue-600 px-6 py-2 text-sm font-semibold text-white shadow-sm hover:opacity-80 sm:w-auto;
+	}
+
+	.disabled {
+		@apply bg-blue-300 cursor-not-allowed;
+	}
 }
 
 a {
 	font-weight: 500;
-	color: #646cff;
-	text-decoration: inherit;
 }
 a:hover {
-	color: #535bf2;
+	font-weight: 600;
 }
